# cc_rust_haskell

./: Dockerfile  README.md  compose.yml
cc/exact-square-root-rest-api-server/: Dockerfile
cc/exact-square-root-rest-api-server/app/: main.cpp
cc/exact-square-root-rest-api-server/tests/: main.cpp
cc/exact_square_root_rest_api_server/tests/: main.cpp
cc/state_machine/: CMakeLists.txt
cc/state_machine/app/: CMakeLists.txt  main.cpp
cc/state_machine/src/: CMakeLists.txt  state_machine_door.cpp  state_machine_door.h  state_machine_tic_tac_toe.cpp  state_machine_tic_tac_toe.h
cc/websocket_server/uwebsockets-cmake/: .gitignore  CMakeLists.txt  README.md  clean.sh  server_ws.cc
cc/websocket_server/uwebsockets-cmake/misc/: ca_clean.sh  gen_certs.sh
haskell/: Dockerfile  start_exact_square_root_rest_api_server.sh
haskell/exact-root/: exact-root.cabal
haskell/exact-root/app/: Main.hs
haskell/exact-square-root-rest-api-server/: CHANGELOG.md  Dockerfile  README.md  exact-square-root-rest-api-server.cabal  package.yaml  start.sh  start_exact_square_root_rest_api_server.sh
haskell/exact-square-root-rest-api-server/app/: Main.hs
haskell/exact-square-root-rest-api-server/src/: ExactRoot.hs  ExactRootEng.hs
haskell/exact-square-root-rest-api-server/test/: Spec.hs
haskell/example-rest-api-json-server/app/: Main.hs
haskell/tic-tac-toe/: package.yaml  tic-tac-toe.cabal
haskell/tic-tac-toe/app/: Main.hs
haskell/tic-tac-toe/src/: TecTacToeGPT.hs  TicTacToeGPTPure.hs
rust/exact-square-root-rest-api-server/: Cargo.toml
webclient/web-content/: index.html
(+12 files in other folders)
